@@ -1,21 +1,4 @@
 # gas target specific configuration file.  This is a -*- sh -*- file.
-#
-#   Copyright 2012 Free Software Foundation
-#
-# This file is free software; you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 3 of the License, or
-# (at your option) any later version.
-# 
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-# 
-# You should have received a copy of the GNU General Public License
-# along with this program; see the file COPYING3.  If not see
-# <http://www.gnu.org/licenses/>.
-#
 
 # This is invoked by configure.  Putting it in a separate shell file
 # lets us skip running autoconf when modifying target specific
@@ -30,7 +13,7 @@
 #   em		emulation; identifies the config/te-* files
 
 # Optional output shell variables; these are not always set:
-#   arch	the default architecture; sets DEFAULT_ARCH on some systems
+#   arch	the default architecture; sets DEFAULT_ARCH on some systems 
 #   endian	"big" or "little"; used on bi-endian systems
 
 cpu_type=
@@ -46,8 +29,6 @@ eval `echo $targ | sed 's/^\([^-]*\)-\([^-]*\)-\(.*\)$/cpu=\1 vendor=\2 os=\3/'`
 # endian and arch.
 # Note: This table is alpha-sorted, please try to keep it that way.
 case ${cpu} in
-  aarch64)		cpu_type=aarch64 endian=little ;;
-  aarch64_be)		cpu_type=aarch64 endian=big ;;
   alpha*)		cpu_type=alpha ;;
   am33_2.0)		cpu_type=mn10300 endian=little ;;
   arm*be|arm*b)		cpu_type=arm endian=big ;;
@@ -57,15 +38,13 @@ case ${cpu} in
   cr16*)		cpu_type=cr16 endian=little ;;
   crisv32)		cpu_type=cris arch=crisv32 ;;
   crx*)			cpu_type=crx endian=little ;;
-  epiphany*)		cpu_type=epiphany endian=little ;;
   fido)			cpu_type=m68k ;;
   hppa*)		cpu_type=hppa ;;
   i[3-7]86)		cpu_type=i386 arch=i386;;
   ia64)			cpu_type=ia64 ;;
-  ip2k)			cpu_type=ip2k endian=big ;;
-  iq2000)		cpu_type=iq2000 endian=big ;;
-  lm32)			cpu_type=lm32 ;;
-  m32c)			cpu_type=m32c endian=little ;;
+  ip2k)			cpu_type=ip2k endian=big ;; 
+  iq2000)		cpu_type=iq2000 endian=big ;; 
+  m32c)			cpu_type=m32c endian=big ;;
   m32r)			cpu_type=m32r endian=big ;;
   m32rle)		cpu_type=m32r endian=little ;;
   m5200)		cpu_type=m68k ;;
@@ -73,28 +52,25 @@ case ${cpu} in
   m680[012346]0)	cpu_type=m68k ;;
   m6811|m6812|m68hc12)	cpu_type=m68hc11 ;;
   m683??)		cpu_type=m68k ;;
-  mep)			cpu_type=mep endian=little ;;
-  microblazeel*)	cpu_type=microblaze endian=little;;
-  microblaze*)		cpu_type=microblaze endian=big;;
+  maxq)			cpu_type=maxq ;;
+  mep-*-elf)		cpu_type=mep endian=big ;;
   mips*el)		cpu_type=mips endian=little ;;
   mips*)		cpu_type=mips endian=big ;;
-  mt)			cpu_type=mt endian=big ;;
+  mt)                   cpu_type=mt endian=big ;;
   or32*)		cpu_type=or32 endian=big ;;
   pjl*)			cpu_type=pj endian=little ;;
   pj*)			cpu_type=pj endian=big ;;
   powerpc*le*)		cpu_type=ppc endian=little ;;
   powerpc*)		cpu_type=ppc endian=big ;;
   rs6000*)		cpu_type=ppc ;;
-  rl78*)		cpu_type=rl78 ;;
-  rx)			cpu_type=rx ;;
   s390x*)		cpu_type=s390 arch=s390x ;;
   s390*)		cpu_type=s390 arch=s390 ;;
-  score*l)		cpu_type=score endian=little ;;
-  score*)		cpu_type=score endian=big ;;
+  score*l)              cpu_type=score endian=little ;;
+  score*)               cpu_type=score endian=big ;;
   sh5le*)		cpu_type=sh64 endian=little ;;
   sh5*)			cpu_type=sh64 endian=big ;;
   sh64le*)		cpu_type=sh64 endian=little ;;
-  sh64*)		cpu_type=sh64 endian=big ;;
+  sh64*)            	cpu_type=sh64 endian=big ;;
   sh*le)		cpu_type=sh endian=little ;;
   sh*)			cpu_type=sh endian=big ;;
   sparc64*)		cpu_type=sparc arch=v9-64 ;;
@@ -102,11 +78,13 @@ case ${cpu} in
   sparclet*)		cpu_type=sparc arch=sparclet ;;
   sparclite*)		cpu_type=sparc arch=sparclite ;;
   sparc*)		cpu_type=sparc arch=sparclite ;; # ??? See tc-sparc.c.
-  tilegx*be)		cpu_type=tilegx endian=big ;;
-  tilegx*)		cpu_type=tilegx endian=little ;;
+  strongarm*be)		cpu_type=arm endian=big ;;
+  strongarm*b)		cpu_type=arm endian=big ;;
+  strongarm*)		cpu_type=arm endian=little ;;
   v850*)		cpu_type=v850 ;;
   x86_64*)		cpu_type=i386 arch=x86_64;;
-  xgate)		cpu_type=xgate ;;
+  xscale*be|xscale*b)	cpu_type=arm endian=big ;;
+  xscale*)		cpu_type=arm endian=little ;;
   xtensa*)		cpu_type=xtensa arch=xtensa ;;
   *)			cpu_type=${cpu} ;;
 esac
@@ -116,9 +94,6 @@ esac
 generic_target=${cpu_type}-$vendor-$os
 # Note: This table is alpha-sorted, please try to keep it that way.
 case ${generic_target} in
-  aarch64*-*-elf)			fmt=elf;;
-  aarch64*-*-linux*)			fmt=elf em=linux ;;
-
   alpha-*-*vms*)			fmt=evax ;;
   alpha-*-osf*)				fmt=ecoff ;;
   alpha-*-linuxecoff*)			fmt=ecoff ;;
@@ -129,9 +104,9 @@ case ${generic_target} in
   arc-*-elf*)				fmt=elf ;;
 
   arm-*-aout)				fmt=aout ;;
-  arm-*-coff)				fmt=coff ;;
-  arm-*-rtems*)				fmt=elf ;;
-  arm-*-elf)				fmt=elf ;;
+  arm-*-coff | thumb-*-coff)		fmt=coff ;;
+  arm-*-rtems* | thumb-*-rtems*)	fmt=elf ;;
+  arm-*-elf | thumb-*-elf)		fmt=elf ;;
   arm-*-eabi*)				fmt=elf em=armeabi ;;
   arm-*-symbianelf*)			fmt=elf em=symbian ;;
   arm-*-kaos*)				fmt=elf ;;
@@ -141,14 +116,12 @@ case ${generic_target} in
   arm-*-linux-*)			fmt=elf  em=linux ;;
   arm-*-uclinux*eabi*)			fmt=elf  em=armlinuxeabi ;;
   arm-*-uclinux*)			fmt=elf  em=linux ;;
-  arm-*-nacl*)				fmt=elf  em=nacl ;;
-  arm-*-netbsdelf*)			fmt=elf  em=nbsd ;;
+  arm-*-netbsdelf*)                 	fmt=elf  em=nbsd ;;
   arm-*-*n*bsd*)			fmt=aout em=nbsd ;;
   arm-*-nto*)				fmt=elf ;;
-  arm-epoc-pe)				fmt=coff em=epoc-pe ;;
-  arm-wince-pe | arm-*-wince | arm*-*-mingw32ce* | arm*-*-cegcc*)
-					fmt=coff em=wince-pe ;;
-  arm-*-pe)				fmt=coff em=pe ;;
+  arm-epoc-pe | thumb-epoc-pe)		fmt=coff em=epoc-pe ;;
+  arm-wince-pe | arm-*-wince)		fmt=coff em=wince-pe ;;
+  arm-*-pe | thumb-*-pe)		fmt=coff em=pe ;;
   arm-*-riscix*)			fmt=aout em=riscix ;;
 
   avr-*-*)				fmt=elf bfd_gas=yes ;;
@@ -158,19 +131,17 @@ case ${generic_target} in
   bfin-*-rtems*)			fmt=elf ;;
   bfin-*elf)				fmt=elf ;;
 
-  cr16-*-elf*)				fmt=elf ;;
+  cr16-*-elf*)	    			fmt=elf ;;
 
   cris-*-linux-* | crisv32-*-linux-*)
 					fmt=multi em=linux ;;
   cris-*-* | crisv32-*-*)		fmt=multi ;;
 
-  crx-*-elf*)				fmt=elf ;;
+  crx-*-elf*)	    			fmt=elf ;;
 
   d10v-*-*)				fmt=elf ;;
   d30v-*-*)				fmt=elf ;;
   dlx-*-*)				fmt=elf ;;
-
-  epiphany-*-*)				fmt=elf ;;
 
   fr30-*-*)				fmt=elf ;;
   frv-*-*linux*)			fmt=elf em=linux;;
@@ -208,10 +179,6 @@ case ${generic_target} in
   i386-*-elf)				fmt=elf ;;
   i386-*-kaos*)				fmt=elf ;;
   i386-*-bsd*)				fmt=aout em=386bsd ;;
-  i386-*-nacl*)				fmt=elf em=nacl
-    case ${cpu} in
-      x86_64*)				arch=x86_64:32 ;;
-    esac ;;
   i386-*-netbsd0.8)			fmt=aout em=386bsd ;;
   i386-*-netbsdpe*)			fmt=coff em=pe ;;
   i386-*-netbsd*-gnu* | \
@@ -228,18 +195,15 @@ case ${generic_target} in
   i386-*-linux*aout*)			fmt=aout em=linux ;;
   i386-*-linux*oldld)			fmt=aout em=linux ;;
   i386-*-linux*coff*)			fmt=coff em=linux ;;
-  i386-*-linux-*)			fmt=elf em=linux
-    case ${cpu}-${os} in
-      x86_64*-linux-gnux32)		arch=x86_64:32 ;;
-    esac ;;
+  i386-*-linux-*)			fmt=elf em=linux ;;
   i386-*-lynxos*)			fmt=elf em=lynx ;;
   i386-*-sysv[45]*)			fmt=elf ;;
   i386-*-solaris*)			fmt=elf em=solaris ;;
   i386-*-freebsdaout*)			fmt=aout em=386bsd ;;
   i386-*-freebsd[12].*)			fmt=aout em=386bsd ;;
   i386-*-freebsd[12])			fmt=aout em=386bsd ;;
-  i386-*-freebsd* \
-  | i386-*-kfreebsd*-gnu)		fmt=elf em=freebsd ;;
+  i386-*-freebsd* | i386-*-kfreebsd*-gnu | i386-*-dragonfly*)
+				    	fmt=elf em=freebsd ;;
   i386-*-sysv*)				fmt=coff ;;
   i386-*-sco3.2v5*coff)			fmt=coff ;;
   i386-*-isc*)				fmt=coff ;;
@@ -265,14 +229,12 @@ case ${generic_target} in
   i386-*-*nt*)				fmt=coff em=pe ;;
   i386-*-chaos)				fmt=elf ;;
   i386-*-rdos*)				fmt=elf ;;
-  i386-*-darwin*)			fmt=macho ;;
 
   i860-*-*)				fmt=elf endian=little ;;
 
   i960-*-elf*)				fmt=elf ;;
 
   ia64-*-elf*)				fmt=elf ;;
-  ia64-*-*vms*)				fmt=elf em=vms ;;
   ia64-*-aix*)				fmt=elf em=ia64aix ;;
   ia64-*-linux-*)			fmt=elf em=linux ;;
   ia64-*-hpux*)				fmt=elf em=hpux ;;
@@ -280,39 +242,33 @@ case ${generic_target} in
 
   ip2k-*-*)				fmt=elf ;;
 
-  iq2000-*-elf)				fmt=elf ;;
+  iq2000-*-elf)         		fmt=elf ;;
 
-  lm32-*-*)				fmt=elf ;;
+  m32c-*-elf)         			fmt=elf ;;
 
-  m32c-*-elf | m32c-*-rtems*)		fmt=elf ;;
-
-  m32r-*-elf* | m32r-*-rtems*)		fmt=elf ;;
+  m32r-*-elf*)				fmt=elf ;;
   m32r-*-linux*)			fmt=elf em=linux;;
 
   m68hc11-*-* | m6811-*-*)		fmt=elf ;;
   m68hc12-*-* | m6812-*-*)		fmt=elf ;;
 
-  m68k-*-aout)				fmt=aout bfd_gas=yes ;;
   m68k-*-elf*)				fmt=elf ;;
   m68k-*-sysv4*)			fmt=elf em=svr4 ;;
   m68k-*-rtems*)			fmt=elf ;;
   m68k-*-linux-*)			fmt=elf em=linux ;;
-  m68k-*-uclinux*)			fmt=elf em=uclinux ;;
+  m68k-*-uclinux*)			fmt=elf ;;
   m68k-*-gnu*)				fmt=elf ;;
   m68k-*-netbsdelf*)			fmt=elf em=nbsd ;;
   m68k-*-netbsd*)			fmt=aout em=nbsd bfd_gas=yes ;;
   m68k-*-openbsd*)			fmt=aout em=nbsd bfd_gas=yes ;;
   m68k-*-psos*)				fmt=elf em=psos;;
 
-  mep-*-elf)				fmt=elf ;;
+  maxq-*-coff)      			fmt=coff bfd_gas=yes ;;
 
-  metag-*-elf)				fmt=elf ;;
-  metag-*-linux*)			fmt=elf em=linux ;;
+  mep-*-elf)				fmt=elf ;;
 
   mcore-*-elf)				fmt=elf ;;
   mcore-*-pe)				fmt=coff em=pe bfd_gas=yes ;;
-
-  microblaze-*-*)			fmt=elf ;;
 
   # don't change em like *-*-bsd does
   mips-sony-bsd*)			fmt=ecoff ;;
@@ -326,10 +282,8 @@ case ${generic_target} in
   mips-*-lnews*)			fmt=ecoff em=lnews ;;
   mips-*-riscos*)			fmt=ecoff ;;
   mips*-*-linux*)			fmt=elf em=tmips ;;
-  mips*-*-freebsd* | mips*-*-kfreebsd*-gnu)
-					fmt=elf em=freebsd ;;
   mips-*-sysv4*MP* | mips-*-gnu*)	fmt=elf em=tmips ;;
-  mips*-sde-elf* | mips*-mti-elf*)	fmt=elf em=tmips ;;
+  mips*-sde-elf*)			fmt=elf em=tmips ;;
   mips-*-sysv*)				fmt=ecoff ;;
   mips-*-elf* | mips-*-rtems*)		fmt=elf ;;
   mips-*-netbsd*)			fmt=elf em=tmips ;;
@@ -342,9 +296,6 @@ case ${generic_target} in
   # cpu_type for am33_2.0 is set to mn10300
   mn10300-*-linux*)			fmt=elf em=linux ;;
   mn10300-*-*)				fmt=elf ;;
-
-  moxie-*-uclinux)			fmt=elf em=linux;;
-  moxie-*-*)				fmt=elf ;;
 
   mt-*-elf)				fmt=elf bfd_gas=yes ;;
 
@@ -365,7 +316,7 @@ case ${generic_target} in
   ppc-*-pe | ppc-*-cygwin*)		fmt=coff em=pe ;;
   ppc-*-winnt*)				fmt=coff em=pe ;;
   ppc-*-aix5.[01])			fmt=coff em=aix5 ;;
-  ppc-*-aix[5-9].*)			fmt=coff em=aix5 ;;
+  ppc-*-aix5.*)				fmt=coff em=aix5 ;;
   ppc-*-aix*)				fmt=coff ;;
   ppc-*-beos*)				fmt=coff ;;
   ppc-*-*n*bsd* | ppc-*-elf*)		fmt=elf ;;
@@ -381,7 +332,7 @@ case ${generic_target} in
   s390-*-linux-*)			fmt=elf em=linux ;;
   s390-*-tpf*)				fmt=elf ;;
 
-  score-*-elf)				fmt=elf ;;
+  score-*-elf)                          fmt=elf ;;
 
   sh*-*-linux*)				fmt=elf em=linux
     case ${cpu} in
@@ -390,14 +341,9 @@ case ${generic_target} in
     esac ;;
   sh5*-*-netbsd*)			fmt=elf em=nbsd ;;
   sh64*-*-netbsd*)			fmt=elf em=nbsd ;;
-  sh*-*-netbsdelf*)			fmt=elf em=nbsd
-    case ${cpu} in
-      sh*l*)	endian=little ;;
-      *)	endian=big ;;
-    esac ;;
+  sh*-*-netbsdelf*)			fmt=elf em=nbsd ;;
   sh*-*-symbianelf*)			fmt=elf endian=little ;;
-  sh-*-elf*)				fmt=elf ;;
-  sh-*-uclinux* | sh[12]-*-uclinux*)	fmt=elf em=uclinux ;;
+  sh-*-elf* | sh-*-uclinux* | sh[12]-*-uclinux*)	fmt=elf ;;
   sh-*-coff*)				fmt=coff ;;
   sh-*-nto*)				fmt=elf ;;
   sh-*-pe*)				fmt=coff em=pe bfd_gas=yes endian=little ;;
@@ -407,7 +353,6 @@ case ${generic_target} in
   shle*-*-kaos*)			fmt=elf ;;
   sh64-*-elf*)				fmt=elf ;;
 
-  sparc64-*-rtems*)			fmt=elf ;;
   sparc-*-rtems*)			fmt=elf ;;
   sparc-*-sunos4*)			fmt=aout em=sun3 ;;
   sparc-*-aout)				fmt=aout em=sparcaout ;;
@@ -438,18 +383,18 @@ case ${generic_target} in
   tic30-*-*coff*)			fmt=coff bfd_gas=yes ;;
   tic4x-*-* | c4x-*-*)			fmt=coff bfd_gas=yes ;;
   tic54x-*-* | c54x*-*-*)		fmt=coff bfd_gas=yes need_libm=yes;;
-  tic6x-*-*)				fmt=elf ;;
 
-  tilepro-*-* | tilegx*-*-*)		fmt=elf ;;
-
-  v850*-*-*)				fmt=elf ;;
+  v850-*-*)				fmt=elf ;;
+  v850e-*-*)				fmt=elf ;;
+  v850ea-*-*)				fmt=elf ;;
 
   vax-*-netbsdelf*)			fmt=elf em=nbsd ;;
   vax-*-linux-*)			fmt=elf em=linux ;;
 
+  xscale-*-coff)			fmt=coff ;;
+  xscale-*-elf)				fmt=elf ;;
+
   xstormy16-*-*)			fmt=elf ;;
-  
-  xgate-*-*)    			fmt=elf ;;
 
   xtensa*-*-*)				fmt=elf ;;
 
@@ -458,7 +403,6 @@ case ${generic_target} in
   z8k-*-coff | z8k-*-sim)		fmt=coff ;;
 
   *-*-aout | *-*-scout)			fmt=aout ;;
-  *-*-dragonfly*)			fmt=elf em=dragonfly ;;
   *-*-freebsd* | *-*-kfreebsd*-gnu)	fmt=elf em=freebsd ;;
   *-*-bsd*)				fmt=aout em=sun3 ;;
   *-*-generic)				fmt=generic ;;
@@ -472,7 +416,7 @@ case ${generic_target} in
 esac
 
 case ${cpu_type} in
-  aarch64 | alpha | arm | i386 | ia64 | microblaze | mips | ns32k | pdp11 | ppc | sparc | z80 | z8k)
+  alpha | arm | i386 | ia64 | mips | ns32k | pdp11 | ppc | sparc | z80 | z8k)
     bfd_gas=yes
     ;;
 esac
